--- a/notes/xv6-src/refs.bib
+++ b/notes/xv6-src/refs.bib
@@ -11,7 +11,13 @@
   title = 	 {CS422/522 Lab 1: Bootloader \& Physical Memory Management},
   institution =  {Yale University},
   year = 	 2022,
-  note  = {\url{https://stackoverflow.com/questions/10534798/debugging-user-code-on-xv6-with-gdb}}
+  note  = {\url{https://flint.cs.yale.edu/cs422/assignments/as1.html}}
 }
 
-https://flint.cs.yale.edu/cs422/assignments/as1.html
+@misc{disasm-flat,
+  author = 	 {Stackoverflow},
+  title = 	 {Disassembling A Flat Binary File Using objdump},
+  institution =  {Stackoverflow},
+  year = 	 2013,
+  note  = {\url{https://stackoverflow.com/questions/14290879/disassembling-a-flat-binary-file-using-objdump}}
+}
