--- a/notes/xv6-src/refs.bib
+++ b/notes/xv6-src/refs.bib
@@ -21,3 +21,11 @@
   year = 	 2013,
   note  = {\url{https://stackoverflow.com/questions/14290879/disassembling-a-flat-binary-file-using-objdump}}
 }
+
+@misc{jasoncc-mem,
+  author = 	 {jasoncc},
+  title = 	 {Notes on x86\_64 Linux Memory Management Part 1: Memory Addressing},
+  institution =  {jasoncc.github.io},
+  year = 	 2013,
+  note  = {\url{https://jasoncc.github.io/kernel/jasonc-mm-x86.html}}
+}
