--- a/notes/xv6-src/refs.bib
+++ b/notes/xv6-src/refs.bib
@@ -1,3 +1,11 @@
+@misc{xv6-x86,
+  author = 	 {MIT PDOS},
+  title = 	 {xv6},
+  institution =  {MIT},
+  year = 	 2018,
+  note  = {\url{https://github.com/mit-pdos/xv6-public}}
+}
+
 @misc{xv6-debug,
   author = 	 {Stackoverflow},
   title = 	 {Debugging user-code on xv6 with gdb},
@@ -14,6 +22,14 @@
   note  = {\url{https://flint.cs.yale.edu/cs422/assignments/as1.html}}
 }
 
+@misc{yale-cs422,
+  author = 	 {CS422},
+  title = 	 {CS422/522},
+  institution =  {Yale University},
+  year = 	 2022,
+  note  = {\url{https://flint.cs.yale.edu/cs422}}
+}
+
 @misc{disasm-flat,
   author = 	 {Stackoverflow},
   title = 	 {Disassembling A Flat Binary File Using objdump},
@@ -28,4 +44,20 @@
   institution =  {jasoncc.github.io},
   year = 	 2013,
   note  = {\url{https://jasoncc.github.io/kernel/jasonc-mm-x86.html}}
+}
+
+@misc{xv6-annotated,
+  author = 	 {palladian1},
+  title = 	 {xv6-annotated},
+  institution =  {github},
+  year = 	 2021,
+  note  = {\url{https://github.com/palladian1/xv6-annotated/tree/main}}
+}
+
+@misc{x86-reference,
+  author = 	 {felixcloutier},
+  title = 	 {x86 and amd64 instruction reference},
+  institution =  {},
+  year = 	 2023,
+  note  = {\url{https://www.felixcloutier.com/x86}}
 }
